# xsd-to-rs

./: .gitignore  Cargo.toml
src/: lib.rs  xsd.rs
src/xsd/: attribute.rs  choice.rs  complex_type.rs  element.rs  mod.rs  restriction.rs  schema.rs  sequence.rs  simple_content.rs  simple_type.rs
tests/: smoke.rs
