[package]
name = "xsd-to-rs"
version = "0.1.0"
authors = ["Jakob Bowyer <jkbbwr@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.27"
quote = "1.0.9"
syn = { version = "1.0.72", features = ["extra-traits", "full"] }
structmeta = "0.1.3"
roxmltree = "0.14.1"
rust_decimal = "1.14.3"